--- a/src/components/Characters/Comics/Comics.css
+++ b/src/components/Characters/Comics/Comics.css
@@ -90,14 +90,14 @@
   padding: 20px;
 }
 
-@media only screen and (max-width: 1200px) {
-  .comics {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
 @media only screen and (max-width: 800px) {
   .comics {
     grid-template-columns: repeat(1, 1fr);
+    grid-gap: 30px;
+  }
+
+  .comicCard {
+    width: 75vw;
+    margin: 0 auto;
   }
 }
