--- a/src/components/Characters/Search/Search.css
+++ b/src/components/Characters/Search/Search.css
@@ -1,11 +1,20 @@
+/* .search-container {
+  display: flex;
+} */
+
 .search {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   /* align-items: center; */
-  min-height: 100vh;
-  padding-top: 15px;
+  /* min-height: 100vh; */
+  padding-top: 10px;
+  padding-bottom: 30px;
   margin: 0;
+}
+
+.misc {
+  align-items: flex-start;
 }
 
 .search-form {
@@ -98,9 +107,10 @@
 
 .loading-spinner {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 20vh;
 }
 
 .spinner {
@@ -136,4 +146,11 @@
   max-width: 15vw;
   height: auto;
   margin-bottom: 15px;
+}
+
+.loading-img {
+  max-width: 15vw;
+  height: auto;
+  /* margin-bottom: 80px; */
+  padding-bottom: 80px;
 }
